default/objects/Customer_Feedback__c/fields/E2E_Data_Log__c.field-meta.xml
<CustomField>
    <fullName>E2E_Data_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>E2E Data Log</label>
    <referenceTo>E2E_Data_Log__c</referenceTo>
    <relationshipLabel>Customer Feedbacks</relationshipLabel>
    <relationshipName>Customer_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>