default/objects/Customer_Feedback__c/fields/Form_Identification__c.field-meta.xml
<CustomField>
    <fullName>Form_Identification__c</fullName>
    <label>Form Identification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>