default/objects/Customer_Feedback__c/recordTypes/E2E_Feedback.recordType-meta.xml
<RecordType>
    <fullName>E2E_Feedback</fullName>
    <active>true</active>
    <label>E2E Feedback</label>
</RecordType>